[package]
name = "canvas-gc"
version = "0.1.0"
edition = "2018"
default-run = "canvas-gc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
graphql_client = "0.9.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = "1.0.126"
serde_json = "1.0.64"
